#9680 closed bug (fixed)
BGradients are not stored in BPicture
Reported by: | phoudoin | Owned by: | X512 |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #16135 | Blocking: | #14677 |
Platform: | All |
Description
Which means that a BPicture played back don't apply gradients.
Attachments (1)
Change History (17)
comment:1 by , 10 years ago
Blocking: | 6822 added |
---|
follow-up: 3 comment:2 by , 10 years ago
Component: | Kits/Application Kit → Kits/Interface Kit |
---|
comment:3 by , 10 years ago
comment:4 by , 10 years ago
I don't think it can be done without extending/changing the BPicture format. At a minimum, the callback table needs to be enlarged.
comment:5 by , 6 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:6 by , 5 years ago
Would It Be acceptable if we, for a start, handled gradient fills as "normal" fills? That would be at least an improvement to not handling them at all.
comment:7 by , 4 years ago
Blocking: | 6822 removed |
---|
comment:8 by , 4 years ago
Blocking: | 14677 added |
---|
comment:9 by , 3 years ago
Blocked By: | 16135 added |
---|
comment:10 by , 3 years ago
Keywords: | bpicture bgradient removed |
---|---|
Owner: | changed from | to
Work in progress patch: https://review.haiku-os.org/c/haiku/+/2829
comment:12 by , 3 years ago
Test pages now display gradients, but the area which displays the printer , driver and transport info is cut off. I have attached scans of the printer test page from both my Canon which shows the issue.
by , 3 years ago
Attachment: | test_page_Canon.png added |
---|
comment:15 by , 3 years ago
Milestone: | R1 → R1/beta3 |
---|
comment:16 by , 3 years ago
I have opened a new ticket for the existing test page print issue. https://dev.haiku-os.org/ticket/16410
Replying to anevilyak: Ooops, let see that: I'm confusing my BeOS kits now :-\