src/kits/interface/PicturePlayer.cpp
@@ -18,9 +18,12 @@
 #include <string.h>
 
 #include <AffineTransform.h>
+#include <DataIO.h>
+#include <Gradient.h>
 #include <PictureProtocol.h>
 #include <Shape.h>
 
+#include <AutoDeleter.h>
 #include <StackOrHeapArray.h>
 
 
@@ -520,6 +523,88 @@ draw_string_locations(void* _context, const char* _string, size_t length,
 }
 
 
+static void
+draw_rect_gradient(void* _context, const BRect& rect, BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	((void (*)(void*, BRect, BGradient&))context->function_table[fill ? 56 : 57])(
+		context->user_data, rect, gradient);
+}
+
+
+static void
+draw_round_rect_gradient(void* _context, const BRect& rect, const BPoint& radii, BGradient& gradient,
+	bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	((void (*)(void*, BRect, BPoint, BGradient&))context->function_table[fill ? 58 : 59])(
+		context->user_data, rect, radii, gradient);
+}
+
+
+static void
+draw_bezier_gradient(void* _context, size_t numPoints, const BPoint _points[], BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	if (numPoints != 4)
+		return;
+
+	BPoint points[4] = { _points[0], _points[1], _points[2], _points[3] };
+	((void (*)(void*, BPoint*, BGradient&))context->function_table[fill ? 60 : 61])(
+		context->user_data, points, gradient);
+}
+
+
+static void
+draw_arc_gradient(void* _context, const BPoint& center, const BPoint& radii,
+	float startTheta, float arcTheta, BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	((void (*)(void*, BPoint, BPoint, float, float, BGradient&))
+		context->function_table[fill ? 62 : 63])(context->user_data, center,
+			radii, startTheta, arcTheta, gradient);
+}
+
+
+static void
+draw_ellipse_gradient(void* _context, const BRect& rect, BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	BPoint radii((rect.Width() + 1) / 2.0f, (rect.Height() + 1) / 2.0f);
+	BPoint center = rect.LeftTop() + radii;
+	((void (*)(void*, BPoint, BPoint, BGradient&))
+		context->function_table[fill ? 64 : 65])(context->user_data, center,
+			radii, gradient);
+}
+
+
+static void
+draw_polygon_gradient(void* _context, size_t numPoints, const BPoint _points[],
+	bool isClosed, BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+
+	BStackOrHeapArray<BPoint, 200> points(numPoints);
+	if (!points.IsValid())
+		return;
+
+	memcpy((void*)points, _points, numPoints * sizeof(BPoint));
+
+	((void (*)(void*, int32, BPoint*, bool, BGradient&))
+		context->function_table[fill ? 66 : 67])(context->user_data, numPoints,
+			points, isClosed, gradient);
+}
+
+
+static void
+draw_shape_gradient(void* _context, const BShape& shape, BGradient& gradient, bool fill)
+{
+	adapter_context* context = reinterpret_cast<adapter_context*>(_context);
+	((void (*)(void*, BShape, BGradient&))context->function_table[fill ? 68 : 69])(
+		context->user_data, shape, gradient);
+}
+
+
 
 #if DEBUG > 1
 static const char *
@@ -655,7 +740,14 @@ PicturePlayer::Play(void** callBackTable, int32 tableEntries, void* userData)
 		blend_layer,
 		clip_to_rect,
 		clip_to_shape,
-		draw_string_locations
+		draw_string_locations,
+		draw_rect_gradient,
+		draw_round_rect_gradient,
+		draw_bezier_gradient,
+		draw_arc_gradient,
+		draw_ellipse_gradient,
+		draw_polygon_gradient,
+		draw_shape_gradient
 	};
 
 	// We don't check if the functions in the table are NULL, but we
@@ -716,6 +808,20 @@ public:
 			typed = reinterpret_cast<const T *>(fBuffer);
 			fRemaining -= sizeof(T) * count;
 			fBuffer += sizeof(T) * count;
+			return true;
+		}
+
+		bool GetGradient(BGradient*& gradient)
+		{
+			BMemoryIO stream(fBuffer, fRemaining);
+			printf("fRemaining: %ld\n", fRemaining);
+			if (BGradient::Unflatten(gradient, &stream) != B_OK) {
+				printf("BGradient::Unflatten(_gradient, &stream) != B_OK\n");
+				return false;
+			}
+
+			fRemaining -= stream.Position();
+			fBuffer += stream.Position();
 			return true;
 		}
 
@@ -933,6 +1039,141 @@ PicturePlayer::_Play(const picture_player_callbacks& callbacks, void* userData,
 
 				callbacks.draw_shape(userData, shape,
 					header->op == B_PIC_FILL_SHAPE);
+				break;
+			}
+
+			case B_PIC_STROKE_RECT_GRADIENT:
+			case B_PIC_FILL_RECT_GRADIENT:
+			{
+				const BRect* rect;
+				BGradient* gradient;
+				if (callbacks.draw_rect_gradient == NULL || !reader.Get(rect) || !reader.GetGradient(gradient))
+					break;
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_rect_gradient(userData, *rect, *gradient,
+					header->op == B_PIC_FILL_RECT_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_ROUND_RECT_GRADIENT:
+			case B_PIC_FILL_ROUND_RECT_GRADIENT:
+			{
+				const BRect* rect;
+				const BPoint* radii;
+				BGradient* gradient;
+				if (callbacks.draw_round_rect_gradient == NULL || !reader.Get(rect)
+					|| !reader.Get(radii) || !reader.GetGradient(gradient)) {
+					break;
+				}
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_round_rect_gradient(userData, *rect, *radii, *gradient,
+					header->op == B_PIC_FILL_ROUND_RECT_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_BEZIER_GRADIENT:
+			case B_PIC_FILL_BEZIER_GRADIENT:
+			{
+				const size_t kNumControlPoints = 4;
+				const BPoint* controlPoints;
+				BGradient* gradient;
+				if (callbacks.draw_bezier_gradient == NULL
+					|| !reader.Get(controlPoints, kNumControlPoints) || !reader.GetGradient(gradient)) {
+					break;
+				}
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_bezier_gradient(userData, kNumControlPoints,
+					controlPoints, *gradient, header->op == B_PIC_FILL_BEZIER_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_POLYGON_GRADIENT:
+			case B_PIC_FILL_POLYGON_GRADIENT:
+			{
+				const uint32* numPoints;
+				const BPoint* points;
+				BGradient* gradient;
+				if (callbacks.draw_polygon_gradient == NULL || !reader.Get(numPoints)
+					|| !reader.Get(points, *numPoints)) {
+					break;
+				}
+
+				bool isClosed = true;
+				const bool* closedPointer;
+				if (header->op != B_PIC_FILL_POLYGON_GRADIENT) {
+					if (!reader.Get(closedPointer))
+						break;
+
+					isClosed = *closedPointer;
+				}
+
+				if (!reader.GetGradient(gradient))
+					break;
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_polygon_gradient(userData, *numPoints, points, isClosed, *gradient,
+					header->op == B_PIC_FILL_POLYGON_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_SHAPE_GRADIENT:
+			case B_PIC_FILL_SHAPE_GRADIENT:
+			{
+				const uint32* opCount;
+				const uint32* pointCount;
+				const uint32* opList;
+				const BPoint* pointList;
+				BGradient* gradient;
+				if (callbacks.draw_shape_gradient == NULL || !reader.Get(opCount)
+					|| !reader.Get(pointCount) || !reader.Get(opList, *opCount)
+					|| !reader.Get(pointList, *pointCount) || !reader.GetGradient(gradient)) {
+					break;
+				}
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				// TODO: remove BShape data copying
+				BShape shape;
+				shape.SetData(*opCount, *pointCount, opList, pointList);
+
+				callbacks.draw_shape_gradient(userData, shape, *gradient,
+					header->op == B_PIC_FILL_SHAPE_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_ARC_GRADIENT:
+			case B_PIC_FILL_ARC_GRADIENT:
+			{
+				const BPoint* center;
+				const BPoint* radii;
+				const float* startTheta;
+				const float* arcTheta;
+				BGradient* gradient;
+				if (callbacks.draw_arc_gradient == NULL || !reader.Get(center)
+					|| !reader.Get(radii) || !reader.Get(startTheta)
+					|| !reader.Get(arcTheta) || !reader.GetGradient(gradient)) {
+					break;
+				}
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_arc_gradient(userData, *center, *radii, *startTheta,
+					*arcTheta, *gradient, header->op == B_PIC_FILL_ARC_GRADIENT);
+				break;
+			}
+
+			case B_PIC_STROKE_ELLIPSE_GRADIENT:
+			case B_PIC_FILL_ELLIPSE_GRADIENT:
+			{
+				const BRect* rect;
+				BGradient* gradient;
+				if (callbacks.draw_ellipse_gradient == NULL || !reader.Get(rect) || !reader.GetGradient(gradient))
+					break;
+				ObjectDeleter<BGradient> gradientDeleter(gradient);
+
+				callbacks.draw_ellipse_gradient(userData, *rect, *gradient,
+					header->op == B_PIC_FILL_ELLIPSE_GRADIENT);
 				break;
 			}
 
